--- a/index.html
+++ b/index.html
@@ -922,20 +922,20 @@
   
   <!--Instalação Banhytics - inicio -->
   <script>
-(function(tn, tc, cn, sn) {
-  window[tn] = window[tn] || {
-    status: "loading_code",
-    code: tc,
-    cookieName: cn,
-    queue: [],
-    send: function(a, d){
-      d = d || {};
-      window[tn].queue.push({
-        a: a,
-        d: Object.assign(d, {timestamp: Date.now()})
-      });
-    }
-  };
+    (function(tn, tc, cn, sn) {
+      window[tn] = window[tn] || {
+        status: "loading_code",
+        code: tc,
+        cookieName: cn,
+        queue: [],
+        send: function(a, d){
+          d = d || {};
+          window[tn].queue.push({
+            a: a,
+            d: Object.assign(d, {timestamp: Date.now()})
+          });
+        }
+    };
 
   if(window[tn].status == "loading_code") {
     window[tn].status = "waiting_script";
@@ -944,7 +944,7 @@
     s.src = "https://script.google.com/macros/s/" + tc + "/dev/library?tn=" + tn +"&sn=" + sn;
     document.body.appendChild(s);
   }
-})("tracker", "AKfycbzeYzAAMhfoaRoDZoZF4MRgBYYAvs-r3RH59ViRJ0oLoUk2yxSdndtIUQwNtR7szZnB", "_trackerCk", "CarolinaBartoli");
+})("tracker", "AKfycbzeYzAAMhfoaRoDZoZF4MRgBYYAvs-r3RH59ViRJ0oLoUk2yxSdndtIUQwNtR7szZnB", "_trackerCk", "CarolBartoli");
 //https://script.google.com/a/macros/raccoon.ag/s/AKfycbzeYzAAMhfoaRoDZoZF4MRgBYYAvs-r3RH59ViRJ0oLoUk2yxSdndtIUQwNtR7szZnB/exec
 
 window["tracker"].send("pageview", {
