--- a/index.html
+++ b/index.html
@@ -2617,9 +2617,9 @@ window["tracker"].send("pageview", {
     //TAG 4 - Envio do Formulário
     button.onclick = function envioForm(){
         tracker.send('event', {
-        'category': 'Visualizou o forms',
-        'action': 'scroll',
-        'label': 'Visualizou o formulário',
+        'category': 'Enviou o forms',
+        'action': 'submit',
+        'label': 'Enviou o formulário',
         'cd1': 'Source Code'
         })
     };
