--- a/index.html
+++ b/index.html
@@ -2615,7 +2615,7 @@ window["tracker"].send("pageview", {
     //TAG 3 - Input no Formulário
     
     //TAG 4 - Envio do Formulário
-    document.querySelector('.btn').addEventListener('submit', envioForm);
+    document.querySelector('.btn.btn-xl').addEventListener('submit', envioForm);
     
     function envioForm(){
         tracker.send('event', {
