--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
       background-color: #222222;
     }
 
-    .btn-primary {
+    .
+    btn-primary {
       color: white;
       background-color: #fed136;
       border-color: #fed136;
@@ -2615,7 +2616,7 @@ window["tracker"].send("pageview", {
     //TAG 3 - Input no Formulário
     
     //TAG 4 - Envio do Formulário
-    document.getElementsByClassName('btn').addEventListener('submit', envioForm);
+    document.querySelector('form.button').addEventListener('submit', envioForm);
     
     function envioForm(){
         tracker.send('event', {
