--- a/index.html
+++ b/index.html
@@ -2614,7 +2614,7 @@ window["tracker"].send("pageview", {
     
     //TAG 3 - Input no Formulário
     let elemento = document.querySelector('#contactForm .row')
-    entradaForms.addEventListener('input', function(elemento){
+    elemento.addEventListener('input', function(elemento){
     tracker.send('event',{
       'category': 'Preencheu o forms',
       'action': 'Input no forms',
