--- a/index.html
+++ b/index.html
@@ -2610,6 +2610,7 @@ window["tracker"].send("pageview", {
         'label': 'Visualizou o formulário',
         'cd1': 'Source Code'
         });
+      forms.removeEventListener('mouseup', visualizacaoForms);
     };
     
     //TAG 3 - Input no Formulário
