--- a/index.html
+++ b/index.html
@@ -2660,7 +2660,7 @@ window["tracker"].send("pageview", {
         'category': 'Interagiu com o navbar',
         'action': 'click',
         'label': 'navbar',
-        'cd1': elemento.target.getAttribute('href'),
+        'cd1': elemento.li.a.target.getAttribute('href'),
         'cd2': 'Source Code'
         })
     })
