--- a/index.html
+++ b/index.html
@@ -2659,7 +2659,7 @@ window["tracker"].send("pageview", {
         'category': 'Interagiu com o navbar',
         'action': 'click',
         'label': 'navbar',
-        'cd1': elemento.li.target.getAttribute('a.href'),
+        'cd1': elemento.target.getAttribute('li a.href'),
         'cd2': 'Source Code'
         })
     })
