--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
 
 <head>
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-N266PGK');</script>
+<!-- End Google Tag Manager -->
+  
 <!-- comentário aqui -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -920,6 +928,10 @@
 </head>
 
 <body id="page-top" class="index">
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N266PGK"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   
   <!--Instalação Banhytics - inicio -->
   <script>
@@ -2583,7 +2595,7 @@ window["tracker"].send("pageview", {
         'label': 'Faça um orçamento',
         'cd1': 'Source Code'
         })
-      })*/
+      })
     
     //TAG 1 - Rolagem até o fim da página
     document.addEventListener('scroll', scrollTotal);
@@ -2721,8 +2733,7 @@ window["tracker"].send("pageview", {
         'label': 'Pop-up não restringido',
         'cd1':'Source Code'
       })
-    })
-    
+    })*/
   </script>
 
 </body>
